--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import "./settings/base";
 
 //components
+@import "./components/home";
 @import "./components/button";
-
+@import "./components/card-movie";
 //Screens
