--- a/src/styles/components/_card-movie.scss
+++ b/src/styles/components/_card-movie.scss
@@ -13,36 +13,51 @@
   & .cardmovie-img {
     width: 100%;
     height: 100%;
+    transition-property: scale;
+    transition-duration: 1.5s;
   }
-  & .cardmovie-container-description {
+  &:hover .cardmovie-img {
+    scale: 1.2;
+  }
+  &:active,
+  &:hover .cardmovie-container-description {
     width: 100%;
     height: 100%;
-    background-color: rgba(map-get($primary, "main"), 0.9);
+    background-color: rgba(map-get($primary, "main"), 0.6);
     position: absolute;
     top: 0;
     bottom: 0;
+  }
 
+  & .cardmovie-container-description {
     & .subcontainer {
       display: none;
+    }
+  }
 
-      @include tablet {
-        color: map-get($secondary, "main");
-        height: 100%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-direction: column;
-      }
-      & h1 {
-        margin-bottom: 0;
-      }
-      & p {
-        padding: 0 8px;
-        text-align: center;
-        margin-bottom: 8px;
-        color: map-get($secondary, "dark");
-        font-weight: 600;
-      }
+  @include tablet {
+    &:hover .cardmovie-container-description {
+      background-color: rgba(map-get($primary, "main"), 0.9);
+    }
+    &:hover .cardmovie-container-description .subcontainer {
+      color: map-get($secondary, "main");
+      height: 100%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+    }
+    & h1 {
+      margin-bottom: 0;
+      text-align: center;
+      font-size: 1.5rem;
+    }
+    & p {
+      padding: 0 8px;
+      text-align: center;
+      margin-bottom: 8px;
+      color: map-get($secondary, "dark");
+      font-weight: 600;
     }
   }
 }
