--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,6 @@
 @import "./components/home";
 @import "./components/button";
 @import "./components/card-movie";
+@import "./components//movie-detail";
+
 //Screens
