--- a/src/styles/components/_card-movie.scss
+++ b/src/styles/components/_card-movie.scss
@@ -19,7 +19,7 @@
   &:hover .cardmovie-img {
     scale: 1.2;
   }
-  &:active,
+
   &:hover .cardmovie-container-description {
     width: 100%;
     height: 100%;
@@ -51,13 +51,14 @@
       margin-bottom: 0;
       text-align: center;
       font-size: 1.5rem;
+      color: map-get($secondary, "dark");
     }
     & p {
       padding: 0 8px;
       text-align: center;
       margin-bottom: 8px;
       color: map-get($secondary, "dark");
-      font-weight: 600;
+      font-weight: 200;
     }
   }
 }
