--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 @import "./settings/base";
 
 //components
+@import "./components/nav-bar";
+@import "./components/search-bar";
 @import "./components/home";
 @import "./components/button";
 @import "./components/card-movie";
