--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 //components
 @import "./components/nav-bar";
 @import "./components/search-bar";
+@import "./components//banner";
 @import "./components/home";
 @import "./components/button";
 @import "./components/card-movie";
