perf/ paginate, se agregan estilos y logra un componente responsive

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,5 +9,6 @@
 @import "./components/button";
 @import "./components/card-movie";
 @import "./components//movie-detail";
+@import "./components/paginate";
 
 //Screens
