feat/ Footer, se agrega componente junto a los estilos correspondientes, se establecen fuentes al proyecto

--- a/src/styles/components/_nav-bar.scss
+++ b/src/styles/components/_nav-bar.scss
@@ -37,7 +37,7 @@
   @include tablet {
     .logo {
       color: map-get($primary, "main");
-      text-transform: uppercase;
+      text-transform: capitalize;
       display: block;
     }
     .logo span {
