--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,5 +10,5 @@
 @import "./components/card-movie";
 @import "./components//movie-detail";
 @import "./components/paginate";
-
+@import "./components/footer";
 //Screens
