--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,9 @@ body{
   margin: 0;
   padding: 0;
   background-color:#161823 ;
+  font-family: 'Roboto', sans-serif;;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Roboto Slab', serif;
 }
