feat/ component error, en situaciones en el que al ingresar al home ocurre un error al obtener los datos, el sistema mostrara el componente informando lo sucedido

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,4 +11,6 @@
 @import "./components//movie-detail";
 @import "./components/paginate";
 @import "./components/footer";
+@import "./components/error";
+
 //Screens
