--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,5 +12,4 @@
 @import "./components/paginate";
 @import "./components/footer";
 @import "./components/error";
-
-//Screens
+@import "./components/loading"; //Screens
