perf/ revisando ultimos detalles para entrega

--- a/src/styles/components/_movie-detail.scss
+++ b/src/styles/components/_movie-detail.scss
@@ -5,7 +5,6 @@
   max-width: 80vw;
   position: relative;
   overflow-y: auto;
-
   box-sizing: border-box;
 
   img {
@@ -112,14 +111,15 @@
       .container-a {
         align-self: flex-end;
         width: 60%;
-        min-height: 70%;
+        min-height: 40%;
+        padding-right: 16px;
         .summary {
           font-size: 16px;
         }
       }
 
       .container-b {
-        min-height: 30%;
+        min-height: 40%;
         display: grid;
         grid-template-columns: 30% 40%;
         gap: 16px;
