--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ body{
 h1, h2, h3, h4, h5 {
   font-family: 'Roboto Slab', serif;
 }
+
+*::-webkit-scrollbar {
+  width: 10px;               /* width of the entire scrollbar */
+}
+
+*::-webkit-scrollbar-track {
+  background:  white;        /* color of the tracking area */
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #dd6609;    /* color of the scroll thumb */
+  border-radius: 5px;
+         /* roundness of the scroll thumb */
+   /* creates padding around scroll thumb */
+}
