feat/ NotFound component

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,4 +14,4 @@
 @import "./components/footer";
 @import "./components/error";
 @import "./components/loading";
-//Screens
+@import "./components/not-found"; //Screens
