--- a/src/styles/settings/_base.scss
+++ b/src/styles/settings/_base.scss
@@ -36,3 +36,14 @@ $secondary: (
     @content;
   }
 }
+
+@mixin flex-center(
+  $flex-direction: row,
+  $justify-content: center,
+  $align-items: center
+) {
+  display: flex;
+  flex-direction: $flex-direction;
+  align-items: $justify-content;
+  justify-content: $align-items;
+}
