--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -5,10 +5,9 @@
   width: 100%;
   color: white;
   padding-top: 50px;
-  display: flex;
   position: relative;
-  justify-content: center;
-  align-items: center;
+
+  @include flex-center();
 
   img {
     width: 100%;
