--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -19,10 +19,11 @@
       padding: 0 16px;
       color: white;
       height: 100%;
-      display: flex;
-      justify-content: start;
-
-      flex-direction: column;
+      @include flex-center(
+        $justify-content: start,
+        $flex-direction: column,
+        $align-items: start
+      );
 
       h1 {
         color: map-get($primary, "main");
@@ -48,7 +49,6 @@
       height: 100%;
       display: flex;
       justify-content: center;
-
       flex-direction: column;
 
       .social {
