--- a/src/styles/components/_loading.scss
+++ b/src/styles/components/_loading.scss
@@ -1,10 +1,7 @@
 .loading-container {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  @include flex-center($flex-direction: column);
 
   p {
     font-size: 1.2rem;
