--- a/src/styles/components/_not-found.scss
+++ b/src/styles/components/_not-found.scss
@@ -1,8 +1,5 @@
 .not-found {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex-center($flex-direction: column);
   height: 90vh;
   background-color: #f8f8f8;
 
