--- a/src/styles/components/_paginate.scss
+++ b/src/styles/components/_paginate.scss
@@ -21,9 +21,7 @@
       color: white;
       width: 100%;
       height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex-center();
     }
   }
   .button-active {
